# MyCamera

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/debug/: app-debug.apk  app.aab
app/src/androidTest/java/com/weibinhwb/mycamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/libyuv/source/: compare_gcc.cc  compare_win.cc  mjpeg_decoder.cc  rotate_mips.cc  row_gcc.cc  row_mips.cc  row_win.cc  scale_gcc.cc  scale_mips.cc  scale_win.cc
app/src/main/java/com/weibinhwb/mycamera/: App.kt  CameraPreview.kt  CameraView.kt  ExtractOperation.kt  MainActivity.kt  MediaData.kt  MediaDataListener.kt  MediaLifeCycle.kt  MediaListener.kt  MediaOperator.kt  MuxerOperation.kt  VideoActivity.kt  YuvHelper.java
app/src/main/java/com/weibinhwb/mycamera/audio/: AudioCapture.kt  AudioCodec.kt  AudioDecoder.kt  AudioEncoder.kt
app/src/main/java/com/weibinhwb/mycamera/util/: CameraUtil.kt
app/src/main/java/com/weibinhwb/mycamera/utils/: LogUtil.kt  Utils.kt
app/src/main/java/com/weibinhwb/mycamera/video/: CameraCapture.kt  CameraPreview.kt  VideoCapture.kt  VideoCodec.kt  VideoDecoder.kt  VideoEncoder.kt
app/src/main/java/com/weibinhwb/mycamera/view/: RecordListener.kt  RecorderButton.kt
app/src/main/res/layout/: activity_main.xml  activity_video.xml
app/src/main/res/values/: attrs.xml
app/src/test/java/com/weibinhwb/mycamera/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
